--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -19,7 +19,7 @@ $moduleName: 'nav';
 			top: 20px;
 			right: 20px;
 			width: 20px;
-			z-index: 1;
+			z-index: 2;
 		}
 
 		.navigation {
@@ -29,7 +29,7 @@ $moduleName: 'nav';
 			width: 100%;
 			background: $c-00;
 			box-shadow: 0px 0px 14px rgba(103, 105, 133, 0.4); /* stylelint-disable-line length-zero-no-unit */
-			z-index: 1;
+			z-index: 2;
 			padding: 30px;
 
 			&--disabled {
